[gd_scene load_steps=7 format=3 uid="uid://cq0prh6it8nlf"]

[ext_resource type="Script" path="res://scenes/gameoverscreen/game_over_screen.gd" id="1_rjeie"]
[ext_resource type="FontFile" uid="uid://bu5rqea3cknxl" path="res://assets/Kenney Future.ttf" id="1_w5w70"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wbmb"]
bg_color = Color(0.211765, 0, 0.521569, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_sfrc5"]
font = ExtResource("1_w5w70")
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_hk17m"]
font = ExtResource("1_w5w70")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_v30xd"]
font = ExtResource("1_w5w70")
font_size = 35

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rjeie")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -284.0
offset_right = 320.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4wbmb")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 192.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_sfrc5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 224.0
offset_right = 320.0
offset_bottom = 304.0
grow_horizontal = 2
text = "Highscore - 333"
label_settings = SubResource("LabelSettings_hk17m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 304.0
offset_right = 320.0
offset_bottom = 384.0
grow_horizontal = 2
text = "score - 333"
label_settings = SubResource("LabelSettings_v30xd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 368.0
offset_top = 448.0
offset_right = 560.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("1_w5w70")
theme_override_font_sizes/font_size = 25
text = "Retry"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 448.0
offset_right = 272.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("1_w5w70")
theme_override_font_sizes/font_size = 25
text = "Quit"

[connection signal="pressed" from="Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_button_pressed"]
